# ftm

./: .gitignore  LICENSE  README.md  config.yml  opmodel.py  pyproject.toml  requirements.txt  setup.py  task_based_model_openphil.ipynb
analysis/: _setup_.py  exploration_analysis.py  mc_analysis.py  sensitivity_analysis.py
core/: ignore_opmodel.py  opmodel.py
doc/: old_task_based_model_openphil.ipynb  task_based_model_openphil.ipynb
ftm/analysis/: __init__.py  diffy.py  exploration_analysis.py  mc_analysis.py  megareport.py  report.py  sensitivity_analysis.py  timelines_analysis.py
ftm/core/: model.py  scenarios.py  utils.py
ftm/stats/: distributions.py
opmodel/analysis/: __init__.py  bioanchors_comparison.py  diffy.py  excel_check.py  exploration_analysis.py  joint_analysis.py  mc_analysis.py  megareport.py  report.py  scenario_sensitivity_analysis.py  sensitivity_analysis.py  timelines_analysis.py  year_by_year.py
opmodel/core/: dynamic_array.py  opmodel.py  scenarios.py  utils.py
opmodel/report/: report.py
opmodel/stats/: distributions.py
src/: .opmodel.py.swp  opmodel.py
tadamcz/: tadamcz_notes.md
tests/: __init__.py  excel-check.py  excel_check.py  old-check.py  tests.py
website/: README.md  build.py  gen.py
website/src/: 404.html  about.html  bridge.js  description.html  footer.html  header.html  megareport.html  op.js  playground.html  reports.html
website/src/css/: graph.css  tabs.css
website/src/ftm/: ftm.js  test.html
website/src/js/: best-guess-parameters.js  explanation-variables-and-cards.js  (+6 more)
website/tests/: test.py
(+4 files in other folders)
