[tool.poetry]
name = "ftm"
version = "0.1.0"
description = ""
authors = ["Eirol <74545840+eirol@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.9.3"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
gitpython = "^3.1.29"
openpyxl = "^3.0.10"
py-mini-racer = "^0.6.0"
statsmodels = ">=0.14.0"
dill = "^0.3.6"
pandas = "^2.0.3"
seaborn = "^0.12.1"
bs4 = "^0.0.1"
pyyaml = "^6.0"
copula-wrapper = {git = "https://github.com/tadamcz/copula-wrapper"}
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
